# Teleghost

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bridgemost.service.example  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/bridgemost/: __init__.py  __main__.py  bridge.py  config.py  core.py  emoji.py  health.py  markdown.py  mattermost.py  setup.py  telegram_presentation.py  websocket.py  whisper.py
src/bridgemost/adapters/: base.py  googlechat.py  telegram.py
src/teleghost/: bridge.py  config.py  health.py  mattermost.py  websocket.py  whisper.py
tests/: __init__.py  test_bridge.py  test_config.py  test_core_bridge_commands.py  test_degraded_mode.py  test_emoji.py  test_health.py  test_health_degraded.py  test_markdown.py  test_mattermost.py  test_reply_threading.py  test_repo_hygiene.py  test_runtime_error_handling.py  test_store.py  test_store_prefs.py  test_telegram_clean_mode.py  test_telegram_command_passthrough.py  test_telegram_security.py  test_telegram_streaming.py  test_version_consistency.py  test_whisper.py
